[package]
name = "lva-camo-status"
version = "0.0.0"
edition = "2024"

[dependencies]
chrono = "=0.4.42"
clap = { version = "=4.5.53", features = ["derive"] }
minijinja = "=2.14.0"
scraper = "=0.25.0"
serde = { version = "=1.0.228", features = ["derive"] }
thiserror = "=2.0.17"
toml = "=0.9.8"
ureq = "=3.1.4"

[dev-dependencies]
insta = "=1.45.0"
